--- a/Zen/src/styles.css
+++ b/Zen/src/styles.css
@@ -40,10 +40,10 @@ src:url("Assets/consola.ttf");
 
 #input {
   position: relative;
-  width: 75%;
+  width: 80%;
   height: 40px;
   top: 10px;
-  left: 20px;
+  left: 10px;
   padding-left: 10px;
   background-color: var(--background);
   border: 1px solid var(--outline);
@@ -78,21 +78,22 @@ header {
 
 #dbg {
   position: relative;
-  left: 70%;
+  left: 72%;
   top: 10px;
   font-family: SegoeIcons;
   background-color: transparent;
-  width: 30px;
+  width: 70px;
   height: 30px;
-  color: #9e74ff;
+  color: var(--alt-text);
   font-size: 16pt;
   border: none;
+  display: inline-flex;
 }
 
 #status {
   position: relative;
-  left: 72%;
-  top: 5px;
+  top: -5px;
+  margin-right: 5px;
   font-family: SegoeIcons;
   background-color: transparent;
   width: 30px;
@@ -104,7 +105,7 @@ header {
 
 #send {
   position: relative;
-  left: 15px;
+  left: 5px;
   top: 20px;
   font-family: SegoeIcons;
   background-color: transparent;
@@ -127,9 +128,9 @@ header {
   z-index: -5;
   border: none;
   overflow-y: hidden;
-  }
+}
   
-  #editor {
+#editor {
   position: fixed;
   top: 50px;
   left: 50px;
@@ -145,9 +146,9 @@ header {
   padding-top: 10px;
   display: block;
   font-family: Consolas, 'Courier New', Courier, monospace;
-  }
+}
   
-  #numbers {
+#numbers {
   position: fixed;
   width: 20px;
   left: 0px;
@@ -156,14 +157,31 @@ header {
   padding-top: 10px;
   text-align: right;
   font-family: Consolas, 'Courier New', Courier, monospace;
-  }
+}
   
-  #numbers span {
+#numbers span {
   counter-increment: linenumber;
-  }
+}
   
-  #numbers span::before {
+#numbers span::before {
   content: counter(linenumber);
   display: block;
   color: var(--alt-text);
-  }  
+}
+
+#consol {
+  position: fixed;
+  top: 60px;
+  left: 50%;
+  background-color: var(--secondary);
+  z-index: 10;
+  width: 95%;
+  transform: translate(-50%, 0%);
+  height: 80px;
+  border: 1px solid var(--outline);
+  border-radius: 5px;
+  resize: none;
+  display: none;
+  font-family: Consolas;
+  color: var(--alt-text);
+}
