--- a/Zen/src/styles.css
+++ b/Zen/src/styles.css
@@ -1,11 +1,11 @@
 :root {
-  --background: #0d1117;
+  --background: #0c0f14;
   --text: #e6edf3;
-  --outline: #30363d;
+  --outline: #1d252c;
   --alt-text: #848d97;
   --link: #2f81f7;
   --button: #238636;
-  --secondary: #161b22;
+  --secondary: #10141a;
   --font-family: Consolas;
 }
 
@@ -35,14 +35,14 @@ src:url("Assets/consola.ttf");
   height: 70px;
   width: 100%;
   border-top: 1px solid var(--outline);
-  background-color: var(--background);
+  background-color: var(--secondary);
 }
 
 #input {
   position: relative;
   width: 80%;
   height: 40px;
-  top: 10px;
+  top: 5px;
   left: 10px;
   padding-left: 10px;
   background-color: var(--background);
@@ -51,6 +51,7 @@ src:url("Assets/consola.ttf");
   font-size: 13pt;
   outline: none;
   color: var(--text);
+  resize: none;
 }
 
 header {
@@ -60,12 +61,12 @@ header {
   height: 50px;
   width: 100%;
   border-bottom: 1px solid var(--outline);
-  background-color: var(--background);
+  background-color: var(--secondary);
 }
 
 #run {
   position: relative;
-  left: 68%;
+  left: 56%;
   top: 10px;
   font-family: SegoeIcons;
   background-color: transparent;
@@ -78,7 +79,7 @@ header {
 
 #dbg {
   position: relative;
-  left: 72%;
+  left: 57%;
   top: 10px;
   font-family: SegoeIcons;
   background-color: transparent;
@@ -88,6 +89,19 @@ header {
   font-size: 16pt;
   border: none;
   display: inline-flex;
+}
+
+#refresh {
+  position: relative;
+  left: 56%;
+  top: 10px;
+  font-family: SegoeIcons;
+  background-color: transparent;
+  width: 30px;
+  height: 30px;
+  color: var(--alt-text);
+  font-size: 16pt;
+  border: none;
 }
 
 #status {
@@ -106,7 +120,7 @@ header {
 #send {
   position: relative;
   left: 5px;
-  top: 20px;
+  top: 15px;
   font-family: SegoeIcons;
   background-color: transparent;
   width: 40px;
@@ -145,7 +159,8 @@ header {
   padding-left: 5px;
   padding-top: 10px;
   display: block;
-  font-family: Consolas, 'Courier New', Courier, monospace;
+  font-family: Consolas;
+  white-space: pre;
 }
   
 #numbers {
@@ -177,7 +192,7 @@ header {
   z-index: 10;
   width: 95%;
   transform: translate(-50%, 0%);
-  height: 80px;
+  height: 150px;
   border: 1px solid var(--outline);
   border-radius: 5px;
   resize: none;
