--- a/Zen/src/styles.css
+++ b/Zen/src/styles.css
@@ -62,11 +62,18 @@ header {
   width: 100%;
   border-bottom: 1px solid var(--outline);
   background-color: var(--secondary);
+  display: inline-flex;
+}
+
+#logo {
+  width: 50px;
+  position: relative;
+  left: 5px;
 }
 
 #run {
   position: relative;
-  left: 56%;
+  left: 48%;
   top: 10px;
   font-family: SegoeIcons;
   background-color: transparent;
@@ -79,8 +86,8 @@ header {
 
 #dbg {
   position: relative;
-  left: 57%;
-  top: 10px;
+  left: 45%;
+  top: 15px;
   font-family: SegoeIcons;
   background-color: transparent;
   width: 70px;
@@ -93,7 +100,7 @@ header {
 
 #refresh {
   position: relative;
-  left: 56%;
+  left: 46%;
   top: 10px;
   font-family: SegoeIcons;
   background-color: transparent;
@@ -152,7 +159,7 @@ header {
   width: 100%;
   background-color: var(--background);
   color: var(--text);
-  font-size: 10pt;
+  font-size: 12pt;
   outline: none;
   border: none;
   resize: none;
@@ -168,7 +175,7 @@ header {
   width: 20px;
   left: 0px;
   top: 50px;
-  font-size: 10pt;
+  font-size: 12pt;
   padding-top: 10px;
   text-align: right;
   font-family: Consolas, 'Courier New', Courier, monospace;
