--- a/Zen/src-tauri/gen/android/app/src/main/res/values-night/themes.xml
+++ b/Zen/src-tauri/gen/android/app/src/main/res/values-night/themes.xml
@@ -2,5 +2,6 @@
     <!-- Base application theme. -->
     <style name="Theme.zen" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
+        <item name="android:statusBarColor" tools:targetApi="l">#10141a</item>
     </style>
 </resources>
